# Notes-Import

./: .gitignore  .project  .pydevproject  MANIFEST.in  Pipfile  README.md  setup.cfg  setup.py  startup.ps1  startup.sh
NotesImport/: .gitignore  gui.py  gui.ui  gui_ui.py  importer.py  logging_factory.py  logging_instance_json.py  stdout_redirector.py
NotesImport/ConfigFiles/: Config.json
src/: custom_formatter.py  gui.py  gui.ui  gui_ui.py
src/ConfigFiles/: Config.json  Logging.json
