[metadata]
name = NotesImport
version = 1.0.0
description = 'Notes Import for QNAP Notes Station Notes into Joplin',
url = 'https://github.com/Mick2nd/Notes-Import',
author = 'Jürgen Habelt',
author_email = 'juergen@habelt-jena.de',
license = 'MIT',

[options]
packages = find:
install_requires =
    importlib; python_version == "3.8"
    requests
    PyQt5
include_package_data = True

[options.packages.find]
include = NotesImport
package_dir = NotesImport

[options.entry_points]
console_scripts =
    NotesImport = NotesImport:Gui.main
